corrected the z-index mistake

--- a/src/HotelX/styles/admin.module.css
+++ b/src/HotelX/styles/admin.module.css
@@ -12,7 +12,7 @@
 	left: 0;
 	height: 90vh;
 	width: 100%;
-	z-index: -1;
+	z-index: 0;
 	background-image: url(../images/admin3.jpg);
 	background-size: cover;
 	display: flex;
